[Android] Add device serial to all host_controller log messages.

BUG=634052

Review-Url: https://codereview.chromium.org/2366763003
Cr-Commit-Position: refs/heads/master@{#420699}

Former-commit-id: cc5e9337589e6bb100b7a0c5d9493557c11b379c